fix horizontal scroll on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,8 +8,12 @@
   font-family: Manrope, serif;
 }
 
-html {
+html, body {
+  max-width: 100vw;
   overflow-x: hidden;
+}
+
+html {
   scroll-behavior: smooth;
 }
 
